--- a/listing.html
+++ b/listing.html
@@ -55,13 +55,39 @@
         left: 50%; 
         transform: translateX(-50%); 
         }
+        .ad_left_rectangle {
+        display: flex;
+        min-height: 300px;
+        min-width: 100px;
+        height: 500px;
+        width: 200px;
+        background-color: #EE5E5E;
+        border-radius: 15px;
+        position: absolute;
+        top: 200px; 
+        left: 25px; 
+        }
+        .ad_right_rectangle {
+        display: flex;
+        min-height: 300px;
+        min-width: 100px;
+        height: 500px;
+        width: 200px;
+        background-color: #EE5E5E;
+        border-radius: 15px;
+        position: absolute;
+        top: 200px; 
+        right: 25px; 
+        }
 
     </style>
 </head>
 
 <body>
     <header>
-        <div class="logo_rectangle"></div>
+        <div class="logo_rectangle">
+            <h2 style="text-align: center; color: white; margin: auto; padding-top: 40px;">WRK.IT</h2>
+        </div>
 
         <div class = 'page_title'><h1>Create Job Listing</h1></div>
         
@@ -78,10 +104,10 @@
         <hr>
 
     </header>
-
+    
     <div class="background_form_rectangle">
         <div style="margin: auto;">
-            <form action="/submit_listing" target="_blank">
+            <form target="_blank">
                 <input type="text" id="job_title" name="job_title" placeholder="Job Title:" required> 
                 <input type="text" id="internship_or_job" name="internship_or_job" placeholder="Internship or Job?" required>
                 <input type="text" id="avaliability" name="avaliability" placeholder="Avaliability:" required> 
@@ -110,6 +136,15 @@
             </form>
         </div>
     </div>
+
+    <div class="ad_left_rectangle">
+        <h2 style="text-align: center; color: white; margin: auto;">Ad Space</h2>
+    </div>
+
+    <div class="ad_right_rectangle">
+        <h2 style="text-align: center; color: white; margin: auto;">Ad Space</h2>
+    </div>
+
 
 </body>
 </html>
