finished the job listing for the search page; updated readme

--- a/search.html
+++ b/search.html
@@ -56,13 +56,50 @@
         }
         .ad_top_rectangle {
         display: flex;
-        height: 100px;
+        height: 120px;
         width: 96%;
         background-color: #EE5E5E;
         border-radius: 15px;
         position: absolute;
-        top: 200px; 
+        top: 180px; 
         left: 25px; 
+        }
+        .background_form_rectangle {
+        display: flex;
+        height: 625px;
+        width: 1200px;
+        background-color: #9FB86C;
+        border-radius: 15px;
+        position: absolute;
+        top: 400px; 
+        left: 50%; 
+        transform: translateX(-50%);
+        }
+        .job_entry_rectangle {
+        display: flex;
+        height: 125px;
+        width: 1100px;
+        background-color: #ffffff;
+        border-radius: 10px;
+        transform: translateX(-50%); 
+        }
+        .company_logo_circle {
+        height: 100px;
+        width: 100px;
+        background-color: #ACACAC;
+        border-radius: 50%;
+        }
+        .button {
+        min-width: 100px;
+        width: 250px;
+        border: none;
+        border-radius: 10px;
+        background-color: #BFEE5E;
+        padding: 15px 32px;
+        text-align: center;
+        font-size: 16px;
+        font-weight: bold;
+        cursor: pointer;
         }
     </style>
 </head>
@@ -99,6 +136,80 @@
     </div>
 
     </header>
-    
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <pre><h1>   Jobs Listed below. Current Filters: ___</h1></pre>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <div class="background_form_rectangle">
+        <div style="margin: auto;">
+            <div class="job_entry_rectangle" style="position: absolute; top: 25px; left: 600px">
+                <div class="company_logo_circle" style="position: absolute; top: 12px; left: 12px"></div>
+                <h1 style="position: absolute; top: 0px; left: 150px"><u>Ethical Hacker</u></h1>
+                <h5 style="position: absolute; top: 50px; left: 150px">Payin' the bills with your mad programmin skills'.<br>Need atleast 100 gigabytes of ram.</h5>
+                <h4 style="position: absolute; top: 0px; left: 500px">> Hewlett Packard</h4>
+                <h4 style="position: absolute; top: 20px; left: 500px">> Palo Alto, California</h4>
+                <h4 style="position: absolute; top: 55px; left: 500px"># of Applicants: 09</h4>
+                <h4 style="position: absolute; top: 75px; left: 500px">Median Salary: $880,000</h4>
+                <h4 style="position: absolute; top: 0px; left: 800px">Contact: 233-114-8767</h4>
+                <h4 style="position: absolute; top: 20px; left: 800px">billgatesreal0@outlook.com</h4>
+                <form style="position: absolute; top: 70px; left: 800px">
+                    <button class='button' type="apply">Apply!</button>
+                </form>
+            </div>
+
+            <div class="job_entry_rectangle" style="position: absolute; top: 175px; left: 600px">
+                <div class="company_logo_circle" style="position: absolute; top: 12px; left: 12px"></div>
+                <h1 style="position: absolute; top: 0px; left: 150px"><u>Plumbing Inspector</u></h1>
+                <h5 style="position: absolute; top: 50px; left: 150px">We're looking for people who know how to<br>unclog the john and turn the shower on.</h5>
+                <h4 style="position: absolute; top: 0px; left: 500px">> Big Roy's Heating and Plumbing</h4>
+                <h4 style="position: absolute; top: 20px; left: 500px">> Fargo, North Dakota</h4>
+                <h4 style="position: absolute; top: 55px; left: 500px"># of Applicants: 1989</h4>
+                <h4 style="position: absolute; top: 75px; left: 500px">Median Salary: $120,856</h4>
+                <h4 style="position: absolute; top: 0px; left: 800px">Contact: 811-425-9632</h4>
+                <h4 style="position: absolute; top: 20px; left: 800px">bigboytoyroy@aol.com</h4>
+                <form style="position: absolute; top: 70px; left: 800px">
+                    <button class='button' type="apply">Apply!</button>
+                </form>
+            </div>
+
+            <div class="job_entry_rectangle" style="position: absolute; top: 325px; left: 600px">
+                <div class="company_logo_circle" style="position: absolute; top: 12px; left: 12px"></div>
+                <h1 style="position: absolute; top: 0px; left: 150px"><u>Deli Worker</u></h1>
+                <h5 style="position: absolute; top: 50px; left: 150px">Chop up the meat and beat up the liverwurst.<br>Recommended that you are a retired MMA fighter</h5>
+                <h4 style="position: absolute; top: 0px; left: 500px">> The Neighborhood Deli</h4>
+                <h4 style="position: absolute; top: 20px; left: 500px">> Philadelphia, Pennsylvania</h4>
+                <h4 style="position: absolute; top: 55px; left: 500px"># of Applicants: 23.2</h4>
+                <h4 style="position: absolute; top: 75px; left: 500px">Median Salary: $21,400</h4>
+                <h4 style="position: absolute; top: 0px; left: 800px">Contact: 773-156-2235</h4>
+                <h4 style="position: absolute; top: 20px; left: 800px">ryeorthekaiser@gmail.com</h4>
+                <form style="position: absolute; top: 70px; left: 800px">
+                    <button class='button' type="apply">Apply!</button>
+                </form>
+            </div>
+
+            <div class="job_entry_rectangle" style="position: absolute; top: 475px; left: 600px">
+                <div class="company_logo_circle" style="position: absolute; top: 12px; left: 12px"></div>
+                <h1 style="position: absolute; top: 0px; left: 150px"><u>Crematory Operator</u></h1>
+                <h5 style="position: absolute; top: 50px; left: 150px">Despose the bodies<br></h5>
+                <h4 style="position: absolute; top: 0px; left: 500px">> Jolly Fun Daycare Center</h4>
+                <h4 style="position: absolute; top: 20px; left: 500px">> Lubbock, Texas</h4>
+                <h4 style="position: absolute; top: 55px; left: 500px"># of Applicants: 00</h4>
+                <h4 style="position: absolute; top: 75px; left: 500px">Median Salary: $2,000,000</h4>
+                <h4 style="position: absolute; top: 0px; left: 800px">Contact: 666-666-6666</h4>
+                <h4 style="position: absolute; top: 20px; left: 800px">NotEvilDaycareCenter@evil.org</h4>
+                <form style="position: absolute; top: 70px; left: 800px">
+                    <button class='button' type="apply">Apply!</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+
+    <br><br><br><br>
+    <h1 style="text-align: center;">Thats all! Check back, we're always updating with new job posts!</h1>
+
 </body>
 </html>
