--- a/listing.html
+++ b/listing.html
@@ -93,7 +93,7 @@
         
 
         <div class="premium_rectangle">
-            <h2 style="text-align: center; color: white; top: 50%;">UPGRADE</h2>
+            <h3 style="text-align: center; color: white;">UPGRADE</h3>
         </div>
 
         <div class = "profile_circle">
