make listing.html and search.html link to the home and profile pages

--- a/listing.html
+++ b/listing.html
@@ -85,19 +85,19 @@
 
 <body>
     <header>
-        <div class="logo_rectangle">
-            <h2 style="text-align: center; color: white; margin: auto; padding-top: 40px;">WRK.IT</h2>
-        </div>
 
         <div class = 'page_title'><h1>Create Job Listing</h1></div>
-        
+
+        <div class="logo_rectangle">
+            <h2 style="text-align: center; color: white; margin: auto; padding-top: 40px;"><a href="Profile.html">WRK.IT</a></h2>
+        </div>
 
         <div class="premium_rectangle">
             <h3 style="text-align: center; color: white;">UPGRADE</h3>
         </div>
 
         <div class = "profile_circle">
-            <h3 style="text-align: center; color: black; padding-top: 60px;">[Username]</h3>
+            <h3 style="text-align: center; color: black; padding-top: 60px;"><a href="Profile.html">[Username]</a></h3>
         </div>
         
         <br><br><br><br><br><br>
