--- a/search.html
+++ b/search.html
@@ -107,7 +107,7 @@
 <body>
     <header>
     <div class="logo_rectangle">
-        <h2 style="text-align: center; color: white; margin: auto; padding-top: 40px;">WRK.IT</h2>
+        <h2 style="text-align: center; color: white; margin: auto; padding-top: 40px;"><a href="Profile.html">WRK.IT</a></h2>
     </div>
 
     <div class="search_bar_rectangle">
@@ -128,7 +128,7 @@
     </div>
 
     <div class = "profile_circle">
-        <h3 style="text-align: center; color: black; padding-top: 60px;">[Username]</h3>
+        <h3 style="text-align: center; color: black; padding-top: 60px;"><a href="Profile.html">[Username]</a></h3>
     </div>
 
     <div class="ad_top_rectangle">
