--- a/home.html
+++ b/home.html
@@ -1,6 +1,8 @@
 <body style="background-color: #9FB86C;">
     <p style="text-align: center;font-size: 150;color: #FFFFFF;">WRK.IT</p>
 
+    <a style="position: relative;left: 48%;position: absolute;top: 55%;background-color:#9FB86C;color:#FFFFFF;border-radius: 5px;height: 50px;width: 100px;font-size: 25;" href="Profile.html">Login</a>
+
     <h1 style="color: #FFFFFF;">Employers</h1>
     <u1 style="color: #FFFFFF;font-size: 20;">
         <li>Post job/internship listings</li>
@@ -24,7 +26,6 @@
 <label for="password" style="color: #FFFFFF;font-size: 20;text-align: center;position: relative;left: 45%;position: absolute;top: 47.5%;">Password:</label>
 <input type="text" id="password" name="password" placeholder="Input password" style="position: relative;left: 45%;position: absolute;top: 50%;">
 
-<a style="position: relative;left: 47%;position: relative;background-color:#9FB86C;color:#FFFFFF;border-radius: 5px;height: 50px;width: 100px;font-size: 25;" href="Profile.html">Login</a>
 
 
 </body>
