--- a/home.html
+++ b/home.html
@@ -5,14 +5,14 @@
 
     <h1 style="color: #FFFFFF;">Employers</h1>
     <u1 style="color: #FFFFFF;font-size: 20;">
-        <li><a href="listing.html"> Create job/internship listings</a></li>
+        <li><a style="color: #FFFFFF;" href="listing.html"> Create job/internship listings</a></li>
         <li>Check applications</li>
         <li>Find quality workers</li>
     </u1>
     <div style="text-align: right;position: absolute;right: 5px;position: relative;bottom: 150px;">
     <h1 style="color: #FFFFFF;">Employees</h1>
     <u1 style="color: #FFFFFF;font-size: 20;">
-        <li><a href="search.html">Check job/internship listings</a></li>
+        <li><a href="search.html" style="color: #FFFFFF;">Check job/internship listings</a></li>
         <li>Update resume</li>
         <li>Network</li>
     </u1>
